force-app/main/default/objects/Account/fields/Access_code__c.field-meta.xml
<CustomField>
    <fullName>Access_code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <inlineHelpText>The max length is 15 characters</inlineHelpText>
    <label>Portal Access Code</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>