force-app/main/default/objects/Account/fields/Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Email__c</fullName>
    <label>Supplier Invoice to (Email address)</label>
    <type>Email</type>
</CustomField>