force-app/main/default/objects/Account/fields/Dangerous_Goods__c.field-meta.xml
<CustomField>
    <fullName>Dangerous_Goods__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dangerous Goods?</label>
    <type>Checkbox</type>
</CustomField>