force-app/main/default/objects/Account/fields/Dangerous_Goods_Price__c.field-meta.xml
<CustomField>
    <fullName>Dangerous_Goods_Price__c</fullName>
    <label>Dangerous Goods</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>