force-app/main/default/objects/Account/fields/Destination_Country_Codes__c.field-meta.xml
<CustomField>
    <fullName>Destination_Country_Codes__c</fullName>
    <label>Destination Country Codes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_ISO_Codes</valueSetName>
    </valueSet>
</CustomField>