force-app/main/default/objects/Account/fields/Diesel_mark_up__c.field-meta.xml
<CustomField>
    <fullName>Diesel_mark_up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diesel mark-up</label>
    <type>Checkbox</type>
</CustomField>