force-app/main/default/objects/Account/fields/Diesel_mark_up_Price__c.field-meta.xml
<CustomField>
    <fullName>Diesel_mark_up_Price__c</fullName>
    <label>Diesel mark-up Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>