force-app/main/default/objects/Account/fields/ETS__c.field-meta.xml
<CustomField>
    <fullName>ETS__c</fullName>
    <label>ETS - price p/ton</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>