force-app/main/default/objects/Account/fields/Fuel_surcharge_percentage__c.field-meta.xml
<CustomField>
    <fullName>Fuel_surcharge_percentage__c</fullName>
    <label>Fuel surcharge percentage</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>