force-app/main/default/objects/Account/fields/Harbour_Dues__c.field-meta.xml
<CustomField>
    <fullName>Harbour_Dues__c</fullName>
    <label>Harbour Dues - price p/ton</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>