force-app/main/default/objects/Account/fields/Overnight_charges_Price__c.field-meta.xml
<CustomField>
    <fullName>Overnight_charges_Price__c</fullName>
    <label>Overnight charges price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>