force-app/main/default/objects/Account/fields/Pallet_Exchange__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Exchange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pallet Exchange?</label>
    <type>Checkbox</type>
</CustomField>