force-app/main/default/objects/Account/fields/Pallet_Exchange_Price__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Exchange_Price__c</fullName>
    <label>Pallet Exchange p/pallet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>