force-app/main/default/objects/Account/fields/Pallet_Jack__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Jack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pallet Jack?</label>
    <type>Checkbox</type>
</CustomField>