force-app/main/default/objects/Account/fields/Pallet_Jack_Price__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Jack_Price__c</fullName>
    <label>Pallet Jack</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>