force-app/main/default/objects/Account/fields/Plug_in__c.field-meta.xml
<CustomField>
    <fullName>Plug_in__c</fullName>
    <label>Plug-in</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>