force-app/main/default/objects/Account/fields/Price_2nd_Driver__c.field-meta.xml
<CustomField>
    <fullName>Price_2nd_Driver__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Two Drivers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>