force-app/main/default/objects/Account/fields/Price_Ferry__c.field-meta.xml
<CustomField>
    <fullName>Price_Ferry__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Direct Ferry</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>