force-app/main/default/objects/Account/fields/Price_Per_Stop__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Stop__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Price Per Stop</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>