force-app/main/default/objects/Account/fields/Seasonal_pricing__c.field-meta.xml
<CustomField>
    <fullName>Seasonal_pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seasonal pricing</label>
    <type>Checkbox</type>
</CustomField>