force-app/main/default/objects/Account/fields/Seasonal_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Seasonal_Surcharge__c</fullName>
    <label>Seasonal Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>