force-app/main/default/objects/Account/fields/Tail_Lift__c.field-meta.xml
<CustomField>
    <fullName>Tail_Lift__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tail Lift?</label>
    <type>Checkbox</type>
</CustomField>