force-app/main/default/objects/Account/fields/Tail_Lift_Price__c.field-meta.xml
<CustomField>
    <fullName>Tail_Lift_Price__c</fullName>
    <label>Tail Lift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>