force-app/main/default/objects/Account/fields/Trailer_Types__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Types__c</fullName>
    <label>Trailer Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dual temp</fullName>
            </value>
            <value>
                <fullName>Frigo - ambient</fullName>
            </value>
            <value>
                <fullName>Frigo - chilled</fullName>
            </value>
            <value>
                <fullName>Frigo - frozen</fullName>
            </value>
            <value>
                <fullName>Frigo - split wall</fullName>
            </value>
            <value>
                <fullName>Curtainside - ambient</fullName>
            </value>
            <value>
                <fullName>Box trailer</fullName>
            </value>
            <value>
                <fullName>Cooled</fullName>
                <isActive>false</isActive>
                <label>Cooled</label>
            </value>
            <value>
                <fullName>Dual-temp</fullName>
                <isActive>false</isActive>
                <label>Dual-temp</label>
            </value>
            <value>
                <fullName>Frigo</fullName>
                <isActive>false</isActive>
                <label>Frigo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>