force-app/main/default/objects/Account/fields/Waiting_Hour__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Hour__c</fullName>
    <label>Waiting Costs p/hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>