force-app/main/default/objects/Account/fields/Weekend_Charges__c.field-meta.xml
<CustomField>
    <fullName>Weekend_Charges__c</fullName>
    <label>Weekend Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>